fix jumping issues in SetupView.elm

--- a/frontend/src/View/new_tests.css
+++ b/frontend/src/View/new_tests.css
@@ -32,6 +32,7 @@ strong.setup {
 div.setup-chip-container {
   position: absolute;
   padding-top: 17px;
+  padding-bottom: 15px;
 }
 .setup-input {
   margin-left: 160px;
