--- a/frontend/src/autocomplete.css
+++ b/frontend/src/autocomplete.css
@@ -7,7 +7,6 @@
 
 .autocomplete-menu {
     position: relative;
-    margin-top: 5px;
     color: black;
     width: 220px;
     margin-left: auto;
